--- a/System/TecSys/src/HomePage/UndergraduateHomePage.form
+++ b/System/TecSys/src/HomePage/UndergraduateHomePage.form
@@ -901,7 +901,9 @@
                                   <grid id="d031f" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                                     <margin top="0" left="0" bottom="0" right="0"/>
                                     <constraints>
-                                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                                        <minimum-size width="150" height="-1"/>
+                                      </grid>
                                     </constraints>
                                     <properties/>
                                     <border type="none"/>
@@ -984,7 +986,7 @@
                                           <component id="92254" class="javax.swing.JTextField" binding="textField7" default-binding="true">
                                             <constraints>
                                               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                                                <preferred-size width="150" height="-1"/>
+                                                <preferred-size width="350" height="-1"/>
                                               </grid>
                                             </constraints>
                                             <properties>
@@ -1004,7 +1006,7 @@
                                           <component id="f466a" class="javax.swing.JTextField" binding="textField9" default-binding="true">
                                             <constraints>
                                               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                                                <preferred-size width="150" height="-1"/>
+                                                <preferred-size width="350" height="-1"/>
                                               </grid>
                                             </constraints>
                                             <properties>
@@ -1028,7 +1030,7 @@
                                           <component id="2769c" class="javax.swing.JTextField" binding="textField8" default-binding="true">
                                             <constraints>
                                               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                                                <preferred-size width="150" height="-1"/>
+                                                <preferred-size width="350" height="-1"/>
                                               </grid>
                                             </constraints>
                                             <properties>
