--- a/System/TecSys/src/HomePage/LecturerHomePage.form
+++ b/System/TecSys/src/HomePage/LecturerHomePage.form
@@ -801,7 +801,7 @@
                                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                                     </constraints>
                                     <properties>
-                                      <font name="Bahnschrift" size="18" style="1"/>
+                                      <font name="Bahnschrift" size="20" style="1"/>
                                       <text value="Courses Name"/>
                                     </properties>
                                   </component>
@@ -828,7 +828,7 @@
                                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                                     </constraints>
                                     <properties>
-                                      <font name="Bahnschrift" size="18" style="1"/>
+                                      <font name="Bahnschrift" size="20" style="1"/>
                                       <text value="Lecture Materials"/>
                                     </properties>
                                   </component>
@@ -838,7 +838,9 @@
                                         <preferred-size width="150" height="50"/>
                                       </grid>
                                     </constraints>
-                                    <properties/>
+                                    <properties>
+                                      <model/>
+                                    </properties>
                                   </component>
                                   <grid id="1eb3" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                                     <margin top="0" left="0" bottom="0" right="0"/>
@@ -858,13 +860,15 @@
                                         <children>
                                           <component id="78ee1" class="javax.swing.JButton" binding="addFilesButton" default-binding="true">
                                             <constraints>
-                                              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                                              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                                             </constraints>
                                             <properties>
-                                              <background color="-16645627"/>
+                                              <background color="-16044493"/>
                                               <font name="Consolas" size="16" style="1"/>
                                               <foreground color="-394241"/>
-                                              <text value="Add Files"/>
+                                              <horizontalAlignment value="0"/>
+                                              <horizontalTextPosition value="0"/>
+                                              <text value="Add Files  "/>
                                             </properties>
                                           </component>
                                         </children>
@@ -879,10 +883,10 @@
                                         <children>
                                           <component id="b1975" class="javax.swing.JButton" binding="renameFilesButton" default-binding="true">
                                             <constraints>
-                                              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                                              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                                             </constraints>
                                             <properties>
-                                              <background color="-16645627"/>
+                                              <background color="-16044493"/>
                                               <font name="Consolas" size="16" style="1"/>
                                               <foreground color="-394241"/>
                                               <text value="Rename Files"/>
@@ -900,10 +904,10 @@
                                         <children>
                                           <component id="c49d3" class="javax.swing.JButton" binding="removeFilesButton" default-binding="true">
                                             <constraints>
-                                              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                                              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                                             </constraints>
                                             <properties>
-                                              <background color="-16645627"/>
+                                              <background color="-16044493"/>
                                               <font name="Consolas" size="16" style="1"/>
                                               <foreground color="-198913"/>
                                               <text value="Remove Files"/>
